Fix flickering scrollbar issue.

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -578,7 +578,7 @@
     z-index: 1;
 }
 
-.cardstories .cardstories_create .cardstories_pick_card .cardstories_deck .cardstories_card { 
+.cardstories .cardstories_create .cardstories_pick_card .cardstories_deck .cardstories_card {
     position: absolute;
     top: 15px;
     left: 56px;
@@ -586,11 +586,8 @@
     height: 142px;
 }
 
-.cardstories .cardstories_create .cardstories_pick_card .cardstories_board .cardstories_cards_hand {
-    /*display: none;*/
-}
-
 .cardstories .cardstories_create .cardstories_pick_card .cardstories_board .cardstories_cards {
+    display: none;
     position: absolute;
     top: 393px;
     left: 50px;
@@ -618,10 +615,6 @@
 
 .cardstories_card_6 {
     z-index: 6;
-}
-
-.cardstories .cardstories_create .cardstories_pick_card .cardstories_board .cardstories_cards_hand {
-    /*display: none;*/
 }
 
 /* state create : write a sentence */
